--- a/GlobalSauce/Resources/JqGrid.de.resx
+++ b/GlobalSauce/Resources/JqGrid.de.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
 	<!-- 
     Microsoft ResX Schema 
@@ -258,9 +258,6 @@
 	<data name="msg_customfcheck" xml:space="preserve">
     <value>Benutzerdefinierte Funktion sollte bei benutzerdefinierte Überprüfung vorhanden sein!</value>
   </data>
-	<data name="msg_date" xml:space="preserve">
-    <value>Bitte geben Sie gültigen Datumswert</value>
-  </data>
 	<data name="msg_email" xml:space="preserve">
     <value>ist keine gültige e-mail</value>
   </data>
@@ -318,4 +315,94 @@
 	<data name="view_caption" xml:space="preserve">
     <value>Ansicht-Datensatz</value>
   </data>
+	<data name="deleteRuleTitle" xml:space="preserve">
+		<value>Regel löschen</value>
+	</data>
+	<data name="locale" xml:space="preserve">
+		<value>de</value>
+	</data>
+	<data name="pgfirst" xml:space="preserve">
+		<value>Erste Seite</value>
+	</data>
+	<data name="pglast" xml:space="preserve">
+		<value>Letzte Seite</value>
+	</data>
+	<data name="pgnext" xml:space="preserve">
+		<value>Nächste Seite</value>
+	</data>
+	<data name="pgprev" xml:space="preserve">
+		<value>Vorherige Seite</value>
+	</data>
+	<data name="pgrecs" xml:space="preserve">
+		<value>Datensätze pro Seite</value>
+	</data>
+	<data name="showhide" xml:space="preserve">
+		<value>Toggle Zusammenbruch Grid erweitern</value>
+	</data>
+	<data name="savetext" xml:space="preserve">
+		<value>Speichern...</value>
+	</data>
+	<data name="addGroupTitle" xml:space="preserve">
+		<value>Untergruppe hinzufügen</value>
+	</data>
+	<data name="deleteGroupTitle" xml:space="preserve">
+		<value>Gruppe löschen</value>
+	</data>
+	<data name="addRuleTitle" xml:space="preserve">
+		<value>Regel hinzufügen</value>
+	</data>
+	<data name="operandTitle" xml:space="preserve">
+		<value>Klicken Sie auf Suche.</value>
+	</data>
+	<data name="resetTitle" xml:space="preserve">
+		<value>Reset-Search-Wert</value>
+	</data>
+	<data name="nav_canceltitle" xml:space="preserve">
+		<value>Zeile Bearbeitung abbrechen</value>
+	</data>
+	<data name="locName" xml:space="preserve">
+		<value>German</value>
+	</data>
+	<data name="locNameEnglish" xml:space="preserve">
+		<value>German</value>
+	</data>
+	<data name="locale2" xml:space="preserve">
+		<value>de</value>
+	</data>
+	<data name="locName2" xml:space="preserve">
+		<value>German (Germany)</value>
+	</data>
+	<data name="locNameEnglish2" xml:space="preserve">
+		<value>German (Germany)</value>
+	</data>
+	<data name="nav_edittext" xml:space="preserve">
+		<value>Bearbeiten</value>
+	</data>
+	<data name="nav_addtext" xml:space="preserve">
+		<value>Hinzufügen</value>
+	</data>
+	<data name="nav_deltext" xml:space="preserve">
+		<value>Löschen</value>
+	</data>
+	<data name="nav_searchtext" xml:space="preserve">
+		<value>Suche</value>
+	</data>
+	<data name="nav_refreshtext" xml:space="preserve">
+		<value>Aktualisieren</value>
+	</data>
+	<data name="nav_viewtext" xml:space="preserve">
+		<value>Blick</value>
+	</data>
+	<data name="nav_savetext" xml:space="preserve">
+		<value>Speichern</value>
+	</data>
+	<data name="nav_savetitle" xml:space="preserve">
+		<value>Speichern</value>
+	</data>
+	<data name="nav_canceltext" xml:space="preserve">
+		<value>Abbrechen</value>
+	</data>
+	<data name="msg_date" xml:space="preserve">
+		<value>Englisch (Vereinigte Staaten)</value>
+	</data>
 </root>
