--- a/GlobalSauce/Resources/JqGrid.es.resx
+++ b/GlobalSauce/Resources/JqGrid.es.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
 	<!-- 
     Microsoft ResX Schema 
@@ -258,9 +258,6 @@
 	<data name="msg_customfcheck" xml:space="preserve">
     <value>Función personalizada debe estar presente en el caso de comprobación personalizada!</value>
   </data>
-	<data name="msg_date" xml:space="preserve">
-    <value>Por favor, indique el valor de fecha válida</value>
-  </data>
 	<data name="msg_email" xml:space="preserve">
     <value>No es un e-mail válido</value>
   </data>
@@ -318,4 +315,94 @@
 	<data name="view_caption" xml:space="preserve">
     <value>Ver registro</value>
   </data>
+	<data name="locale" xml:space="preserve">
+		<value>es</value>
+	</data>
+	<data name="pgfirst" xml:space="preserve">
+		<value>Primera página</value>
+	</data>
+	<data name="pglast" xml:space="preserve">
+		<value>Última página</value>
+	</data>
+	<data name="pgnext" xml:space="preserve">
+		<value>Página siguiente</value>
+	</data>
+	<data name="pgprev" xml:space="preserve">
+		<value>Página anterior</value>
+	</data>
+	<data name="pgrecs" xml:space="preserve">
+		<value>Registros por página</value>
+	</data>
+	<data name="showhide" xml:space="preserve">
+		<value>Alternar expansión colapso de red</value>
+	</data>
+	<data name="savetext" xml:space="preserve">
+		<value>Ahorro...</value>
+	</data>
+	<data name="addGroupTitle" xml:space="preserve">
+		<value>Añadir subgrupo</value>
+	</data>
+	<data name="deleteGroupTitle" xml:space="preserve">
+		<value>Eliminar grupo</value>
+	</data>
+	<data name="addRuleTitle" xml:space="preserve">
+		<value>Agregar regla</value>
+	</data>
+	<data name="deleteRuleTitle" xml:space="preserve">
+		<value>Eliminar regla</value>
+	</data>
+	<data name="operandTitle" xml:space="preserve">
+		<value>Haga clic para seleccionar la operación de búsqueda.</value>
+	</data>
+	<data name="resetTitle" xml:space="preserve">
+		<value>Valor de la búsqueda RESET</value>
+	</data>
+	<data name="nav_canceltitle" xml:space="preserve">
+		<value>Cancelar la edición de fila</value>
+	</data>
+	<data name="locName" xml:space="preserve">
+		<value>Spanish</value>
+	</data>
+	<data name="locNameEnglish" xml:space="preserve">
+		<value>Spanish</value>
+	</data>
+	<data name="locale2" xml:space="preserve">
+		<value>es</value>
+	</data>
+	<data name="locName2" xml:space="preserve">
+		<value>Spanish (Spain)</value>
+	</data>
+	<data name="locNameEnglish2" xml:space="preserve">
+		<value>Spanish (Spain)</value>
+	</data>
+	<data name="nav_edittext" xml:space="preserve">
+		<value>Editar</value>
+	</data>
+	<data name="nav_addtext" xml:space="preserve">
+		<value>Añadir</value>
+	</data>
+	<data name="nav_deltext" xml:space="preserve">
+		<value>Eliminar</value>
+	</data>
+	<data name="nav_searchtext" xml:space="preserve">
+		<value>Búsqueda de</value>
+	</data>
+	<data name="nav_refreshtext" xml:space="preserve">
+		<value>Actualización</value>
+	</data>
+	<data name="nav_viewtext" xml:space="preserve">
+		<value>Ver</value>
+	</data>
+	<data name="nav_savetext" xml:space="preserve">
+		<value>Guardar</value>
+	</data>
+	<data name="nav_savetitle" xml:space="preserve">
+		<value>Guardar</value>
+	</data>
+	<data name="nav_canceltext" xml:space="preserve">
+		<value>Cancelar</value>
+	</data>
+	<data name="msg_date" xml:space="preserve">
+		<value>Inglés (Estados Unidos)</value>
+	</data>
 </root>
