--- a/GlobalSauce/Resources/JqGrid.nl.resx
+++ b/GlobalSauce/Resources/JqGrid.nl.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
 	<!-- 
     Microsoft ResX Schema 
@@ -258,9 +258,6 @@
 	<data name="msg_customfcheck" xml:space="preserve">
     <value>Aangepaste functie moet aanwezig zijn in het geval van aangepaste controleren!</value>
   </data>
-	<data name="msg_date" xml:space="preserve">
-    <value>Voer een geldige datumwaarde in</value>
-  </data>
 	<data name="msg_email" xml:space="preserve">
     <value>dit is geen geldige e-mail</value>
   </data>
@@ -318,4 +315,94 @@
 	<data name="view_caption" xml:space="preserve">
     <value>Weergave Record</value>
   </data>
+	<data name="locale" xml:space="preserve">
+		<value>nl</value>
+	</data>
+	<data name="pgfirst" xml:space="preserve">
+		<value>Eerste pagina</value>
+	</data>
+	<data name="pglast" xml:space="preserve">
+		<value>Laatste pagina</value>
+	</data>
+	<data name="pgnext" xml:space="preserve">
+		<value>Volgende pagina</value>
+	</data>
+	<data name="pgprev" xml:space="preserve">
+		<value>Vorige pagina</value>
+	</data>
+	<data name="pgrecs" xml:space="preserve">
+		<value>Records per pagina</value>
+	</data>
+	<data name="showhide" xml:space="preserve">
+		<value>Toggle vouw ineenstorting raster</value>
+	</data>
+	<data name="savetext" xml:space="preserve">
+		<value>Opslaan...</value>
+	</data>
+	<data name="addGroupTitle" xml:space="preserve">
+		<value>Subgroep toevoegen</value>
+	</data>
+	<data name="deleteGroupTitle" xml:space="preserve">
+		<value>Groep verwijderen</value>
+	</data>
+	<data name="addRuleTitle" xml:space="preserve">
+		<value>Regel toevoegen</value>
+	</data>
+	<data name="deleteRuleTitle" xml:space="preserve">
+		<value>Regel verwijderen</value>
+	</data>
+	<data name="operandTitle" xml:space="preserve">
+		<value>Schakel zoekbewerking.</value>
+	</data>
+	<data name="resetTitle" xml:space="preserve">
+		<value>Reset zoekwaarde</value>
+	</data>
+	<data name="nav_canceltitle" xml:space="preserve">
+		<value>Annuleren rij bewerken</value>
+	</data>
+	<data name="locName" xml:space="preserve">
+		<value>Dutch</value>
+	</data>
+	<data name="locNameEnglish" xml:space="preserve">
+		<value>Dutch</value>
+	</data>
+	<data name="locale2" xml:space="preserve">
+		<value>nl</value>
+	</data>
+	<data name="locName2" xml:space="preserve">
+		<value>Dutch (Belgium)</value>
+	</data>
+	<data name="locNameEnglish2" xml:space="preserve">
+		<value>Dutch (Belgium)</value>
+	</data>
+	<data name="nav_edittext" xml:space="preserve">
+		<value>Bewerken</value>
+	</data>
+	<data name="nav_addtext" xml:space="preserve">
+		<value>Toevoegen</value>
+	</data>
+	<data name="nav_deltext" xml:space="preserve">
+		<value>Verwijderen</value>
+	</data>
+	<data name="nav_searchtext" xml:space="preserve">
+		<value>Zoek</value>
+	</data>
+	<data name="nav_refreshtext" xml:space="preserve">
+		<value>Vernieuwen</value>
+	</data>
+	<data name="nav_viewtext" xml:space="preserve">
+		<value>Weergave</value>
+	</data>
+	<data name="nav_savetext" xml:space="preserve">
+		<value>Opslaan</value>
+	</data>
+	<data name="nav_savetitle" xml:space="preserve">
+		<value>Opslaan</value>
+	</data>
+	<data name="nav_canceltext" xml:space="preserve">
+		<value>Annuleren</value>
+	</data>
+	<data name="msg_date" xml:space="preserve">
+		<value>Engels (Verenigde Staten)</value>
+	</data>
 </root>
